Fix text and spacers on mobile (try #2)

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -27,6 +27,8 @@
     display: flex;
     flex-direction: column;
     width: 60%;
+    text-wrap: wrap;
+    word-wrap: break-word;
 }
 
 #mission-container img {
@@ -402,6 +404,8 @@
     width: 100vw;
     aspect-ratio: 900/100;
     position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .spacer img {
